@@ -24,24 +24,20 @@ import java.util.stream.Collectors;
  *
  * LAYER 1 — CONTENT-BASED (always available, zero user data needed)
  *   Same category + brand overlap + tag overlap.
- *   Used for: "Similar Products" on product detail page.
  *
  * LAYER 2 — COLLABORATIVE FILTERING (available after CF job has run)
- *   "Customers who viewed/bought this also viewed/bought..."
  *   Pre-computed nightly by RecommendationScheduler.
- *   Used for: "Also Bought", "Also Viewed" carousels.
  *
  * LAYER 3 — PERSONALIZED (available when user has history)
- *   "Based on products you've viewed/bought..."
  *   Seeds from user's recent behavior → fetches CF similarities for each seed.
- *   Used for: Homepage "For You" carousel.
  *
  * LAYER 4 — POPULARITY FALLBACK (always available)
  *   Most popular products in the same category.
- *   Used when layers 1-3 return insufficient results.
  *
- * ALL METHODS return at most `limit` products, deduplicated, excluding the
- * source product itself and any products the user has already purchased.
+ * FIELD NOTE:
+ *   Product.categoryLineageIds is a List<String>. Querying sub-categories uses
+ *   Criteria.where("categoryLineageIds").in(categoryId) — NOT a regex on a
+ *   "categoryLineage" string field which does not exist on the Product model.
  */
 @Slf4j
 @Service
@@ -55,17 +51,13 @@ public class RecommendationService {
     private final UserBehaviorRepository behaviorRepository;
     private final BehaviorTrackingService trackingService;
 
-    private static final int DEFAULT_LIMIT = 10;
-    private static final int SEED_PRODUCT_LIMIT = 5; // max seeds for personalized recs
+    private static final int DEFAULT_LIMIT       = 10;
+    private static final int SEED_PRODUCT_LIMIT  = 5;
 
     // =========================================================================
     // PRODUCT PAGE: "Similar Products" + "Also Bought"
     // =========================================================================
 
-    /**
-     * Primary recommendation call for a product detail page.
-     * Returns a structured response with multiple recommendation carousels.
-     */
     public RecommendationResponse getProductPageRecommendations(
             String productId, String userId, String sessionId) {
 
@@ -74,23 +66,15 @@ public class RecommendationService {
 
         Set<String> exclude = Set.of(productId);
 
-        // Carousel 1: Content-based similar products
-        List<Product> similar = getContentBasedSimilar(source, exclude, DEFAULT_LIMIT);
+        List<Product> similar    = getContentBasedSimilar(source, exclude, DEFAULT_LIMIT);
+        List<Product> alsoBought = getCollaborativeRecs(productId, SimilarityType.CO_PURCHASE, exclude, DEFAULT_LIMIT);
+        List<Product> alsoViewed = getCollaborativeRecs(productId, SimilarityType.CO_VIEW,     exclude, DEFAULT_LIMIT);
 
-        // Carousel 2: "Customers also bought" (collaborative filtering)
-        List<Product> alsoBought = getCollaborativeRecs(
-                productId, SimilarityType.CO_PURCHASE, exclude, DEFAULT_LIMIT);
-
-        // Carousel 3: "Customers also viewed"
-        List<Product> alsoViewed = getCollaborativeRecs(
-                productId, SimilarityType.CO_VIEW, exclude, DEFAULT_LIMIT);
-
-        // Fill carousels that are empty with popularity fallback
         if (similar.isEmpty()) {
             similar = getPopularInCategory(source.getCategorySlug(), exclude, DEFAULT_LIMIT);
         }
         if (alsoBought.isEmpty()) {
-            alsoBought = similar; // reuse similar if CF data not available yet
+            alsoBought = similar;
         }
 
         return RecommendationResponse.builder()
@@ -102,34 +86,33 @@ public class RecommendationService {
 
     // =========================================================================
     // LAYER 1: CONTENT-BASED FILTERING
+    //
+    // FIX: was using Criteria.where("categoryLineage").regex(...)
+    //      Product has categoryLineageIds (List<String>), not a "categoryLineage"
+    //      string field. Use Criteria.where("categoryLineageIds").in(categoryId).
     // =========================================================================
 
-    /**
-     * Finds products similar to `source` based on shared attributes.
-     * Scoring: +3 same category, +2 same brand, +1 per shared tag.
-     * No user data required — works from day one of your catalogue.
-     */
     public List<Product> getContentBasedSimilar(Product source, Set<String> exclude, int limit) {
         try {
             List<Criteria> criteriaList = new ArrayList<>();
 
-            // Same category (including sub-categories via lineage)
+            // Same category or any sub-category via lineage IDs
             if (source.getCategorySlug() != null) {
                 criteriaList.add(Criteria.where("categorySlug").is(source.getCategorySlug()));
-                if (source.getCategory() != null) {
-                    criteriaList.add(
-                            Criteria.where("categoryLineage")
-                                    .regex("," + source.getCategory().getId() + ",")
-                    );
-                }
+            }
+            if (source.getCategory() != null && source.getCategory().getId() != null) {
+                // categoryLineageIds contains the category itself + all ancestor IDs.
+                // Any product whose lineage contains this category ID is in the
+                // same category tree — no regex required.
+                criteriaList.add(
+                        Criteria.where("categoryLineageIds").in(source.getCategory().getId())
+                );
             }
 
-            // Same brand
             if (source.getBrandName() != null) {
                 criteriaList.add(Criteria.where("brandName").is(source.getBrandName()));
             }
 
-            // Shared tags
             if (source.getTags() != null && !source.getTags().isEmpty()) {
                 criteriaList.add(Criteria.where("tags").in(source.getTags()));
             }
@@ -143,17 +126,16 @@ public class RecommendationService {
             if (!exclude.isEmpty()) {
                 q.addCriteria(Criteria.where("id").nin(exclude));
             }
-            q.limit(limit * 3); // fetch extra, re-rank by score
+            q.limit(limit * 3);
 
             List<Product> candidates = mongoTemplate.find(q, Product.class);
 
-            // Score each candidate
             return candidates.stream()
                     .map(p -> new AbstractMap.SimpleEntry<>(p, scoreContentSimilarity(source, p)))
                     .sorted(Map.Entry.<Product, Integer>comparingByValue().reversed())
                     .limit(limit)
                     .map(Map.Entry::getKey)
-                    .toList();
+                    .collect(Collectors.toList());
 
         } catch (Exception e) {
             log.warn("Content-based similarity failed for product {}: {}", source.getId(), e.getMessage());
@@ -164,7 +146,7 @@ public class RecommendationService {
     private int scoreContentSimilarity(Product source, Product candidate) {
         int score = 0;
         if (Objects.equals(source.getCategorySlug(), candidate.getCategorySlug())) score += 3;
-        if (Objects.equals(source.getBrandName(), candidate.getBrandName()))        score += 2;
+        if (Objects.equals(source.getBrandName(),    candidate.getBrandName()))    score += 2;
         if (source.getTags() != null && candidate.getTags() != null) {
             Set<String> shared = new HashSet<>(source.getTags());
             shared.retainAll(candidate.getTags());
@@ -177,10 +159,6 @@ public class RecommendationService {
     // LAYER 2: COLLABORATIVE FILTERING (pre-computed)
     // =========================================================================
 
-    /**
-     * Returns the top-N pre-computed similar products for the given signal type.
-     * Reads from ItemSimilarity collection — single indexed lookup, very fast.
-     */
     public List<Product> getCollaborativeRecs(
             String productId, SimilarityType type, Set<String> exclude, int limit) {
         try {
@@ -196,7 +174,7 @@ public class RecommendationService {
                     .map(ItemSimilarity.SimilarEntry::getProductId)
                     .filter(id -> !exclude.contains(id))
                     .limit(limit)
-                    .toList();
+                    .collect(Collectors.toList());
 
             return fetchProductsOrdered(similarIds);
 
@@ -210,19 +188,6 @@ public class RecommendationService {
     // LAYER 3: PERSONALIZED ("For You")
     // =========================================================================
 
-    /**
-     * Generates personalized recommendations for a user based on their history.
-     *
-     * ALGORITHM:
-     *   1. Fetch user's recently viewed/purchased products ("seeds")
-     *   2. For each seed, fetch pre-computed CO_PURCHASE + CO_VIEW neighbors
-     *   3. Aggregate scores (products appearing as neighbors of multiple seeds score higher)
-     *   4. De-duplicate, exclude already-seen products
-     *   5. Re-rank by popularity
-     *   6. Return top N
-     *
-     * Falls back to popularity-based if user has no history.
-     */
     public List<Product> getPersonalizedRecommendations(
             String userId, String sessionId, String currentCategorySlug, int limit) {
         try {
@@ -230,26 +195,18 @@ public class RecommendationService {
                     userId, sessionId, SEED_PRODUCT_LIMIT);
 
             if (recentlyViewed.isEmpty()) {
-                // Cold start: return popular products in the current category context
                 return getPopularInCategory(currentCategorySlug, Set.of(), limit);
             }
 
-            // Get CF neighbors for each seed, aggregate scores
             Map<String, Double> scoreAccumulator = new HashMap<>();
-
             for (String seedId : recentlyViewed) {
-                // Combine CO_PURCHASE (weight 2.0) and CO_VIEW (weight 1.0) signals
                 accumulateSimilarityScores(seedId, SimilarityType.CO_PURCHASE, 2.0, scoreAccumulator);
-                accumulateSimilarityScores(seedId, SimilarityType.CO_VIEW, 1.0, scoreAccumulator);
+                accumulateSimilarityScores(seedId, SimilarityType.CO_VIEW,     1.0, scoreAccumulator);
             }
 
-            // Exclude the seeds themselves
             Set<String> seenIds = new HashSet<>(recentlyViewed);
-
-            // Also exclude products user has already purchased
             if (userId != null) {
-                Set<String> purchased = getPurchasedProductIds(userId);
-                seenIds.addAll(purchased);
+                seenIds.addAll(getPurchasedProductIds(userId));
             }
 
             List<String> rankedIds = scoreAccumulator.entrySet().stream()
@@ -257,11 +214,10 @@ public class RecommendationService {
                     .sorted(Map.Entry.<String, Double>comparingByValue().reversed())
                     .map(Map.Entry::getKey)
                     .limit(limit)
-                    .toList();
+                    .collect(Collectors.toList());
 
             List<Product> personalized = fetchProductsOrdered(rankedIds);
 
-            // Pad with popularity fallback if insufficient results
             if (personalized.size() < limit) {
                 Set<String> exclude = new HashSet<>(seenIds);
                 personalized.forEach(p -> exclude.add(p.getId()));
@@ -288,12 +244,10 @@ public class RecommendationService {
 
     public List<Product> getPopularInCategory(String categorySlug, Set<String> exclude, int limit) {
         try {
-            // Find category ID from slug first
             if (categorySlug == null) {
                 return getGloballyPopular(exclude, limit);
             }
 
-            // Use popularity collection (pre-aggregated, fast lookup)
             List<String> popularIds = popularityRepository
                     .findByCategoryIdOrderByPopularityScoreDesc(categorySlug,
                             PageRequest.of(0, limit + exclude.size()))
@@ -301,7 +255,7 @@ public class RecommendationService {
                     .map(p -> p.getProductId())
                     .filter(id -> !exclude.contains(id))
                     .limit(limit)
-                    .toList();
+                    .collect(Collectors.toList());
 
             if (popularIds.isEmpty()) {
                 return getGloballyPopular(exclude, limit);
@@ -323,13 +277,12 @@ public class RecommendationService {
                     .map(p -> p.getProductId())
                     .filter(id -> !exclude.contains(id))
                     .limit(limit)
-                    .toList();
+                    .collect(Collectors.toList());
 
             return fetchProductsOrdered(ids);
 
         } catch (Exception e) {
             log.warn("Global popularity fallback failed: {}", e.getMessage());
-            // Last resort: just get any active products
             Query q = new Query(Criteria.where("isActive").is(true));
             q.limit(limit);
             return mongoTemplate.find(q, Product.class);
@@ -355,10 +308,6 @@ public class RecommendationService {
                 });
     }
 
-    /**
-     * Fetches full Product documents for a list of IDs, preserving the input order.
-     * MongoDB $in does not preserve order, so we sort after fetching.
-     */
     private List<Product> fetchProductsOrdered(List<String> orderedIds) {
         if (orderedIds.isEmpty()) return List.of();
 
@@ -370,7 +319,7 @@ public class RecommendationService {
         return orderedIds.stream()
                 .map(productMap::get)
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private Set<String> getPurchasedProductIds(String userId) {
